--- a/src/main/resources/fxml/aiWitness.fxml
+++ b/src/main/resources/fxml/aiWitness.fxml
@@ -101,7 +101,7 @@
                   <Image url="@../images/speech%20ballooon.png" />
                </image>
             </ImageView>
-            <Button fx:id="clearNoiseBtn" layoutX="401.0" layoutY="539.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="193.0" text="CLEAR THE NOISE" />
+            <Button fx:id="clearNoiseBtn" layoutX="401.0" layoutY="539.0" mnemonicParsing="false" onAction="#onClearNoiseBtnClick" prefHeight="39.0" prefWidth="193.0" text="CLEAR THE NOISE" />
       </children>
     </AnchorPane>
     
