--- a/src/main/resources/fxml/defendantMemory.fxml
+++ b/src/main/resources/fxml/defendantMemory.fxml
@@ -3,24 +3,31 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.DefendantMemoryController">
+<StackPane stylesheets="@../css/aiDefendantStyle.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.DefendantMemoryController">
   <children>
     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="789.0">
       <children>
-        <ImageView fitHeight="902.0" fitWidth="835.0" layoutX="-12.0" layoutY="-280.0" preserveRatio="true">
+        <ImageView fx:id="image2" fitHeight="560.0" fitWidth="879.0" layoutX="-45.0" layoutY="110.0" preserveRatio="true">
           <image>
-            <Image url="@../images/music.jpg" />
+            <Image url="@../images/defendantCalling.png" />
           </image>
         </ImageView>
+        <ImageView fx:id="image1" fitHeight="568.0" fitWidth="874.0" layoutX="-48.0" layoutY="42.0" preserveRatio="true">
+          <image>
+            <Image url="@../images/defendantSearching.png" />
+          </image>
+        </ImageView>
+
+        <Label layoutX="-2.0" layoutY="-7.0" prefHeight="123.0" prefWidth="796.0" style="-fx-background-color: #000;" />
         <Button layoutX="25.0" layoutY="29.0" mnemonicParsing="false" onAction="#onGoBack" prefHeight="52.0" prefWidth="130.0" text="Go Back" />
           <Label fx:id="timer" layoutX="639.0" layoutY="23.0" prefHeight="63.0" prefWidth="155.0" text="2:00" textFill="WHITE">
             <font>
@@ -32,11 +39,56 @@
             <Font size="20.0" />
           </font>
         </Label>
-        <Label layoutX="259.0" layoutY="60.0" style="-fx-background-color: #000;" text="Use the scroll bar to follow the defendant's story" textFill="WHITE">
+        <Label layoutX="210.0" layoutY="60.0" style="-fx-background-color: #000;" text="Use the scroll bar to follow the defendant's story" textFill="WHITE">
           <font>
             <Font size="20.0" />
           </font>
         </Label>
+        <Slider fx:id="slidingBar" blockIncrement="1.0" layoutX="41.0" layoutY="516.0" majorTickUnit="1.0" max="15.0" minorTickCount="0" prefHeight="84.0" prefWidth="526.0" showTickMarks="true" snapToTicks="true" styleClass="glow-slider" />
+
+        <StackPane fx:id="scene1" layoutX="488.0" layoutY="144.0" prefHeight="170.0" prefWidth="270.0" visible="false">
+          <ImageView fitHeight="167.0" fitWidth="263.0" preserveRatio="true">
+            <image>
+              <Image url="@../images/Speech Balloon 2.png" />
+            </image>
+          </ImageView>
+          <AnchorPane>
+            <Text layoutX="83.0" layoutY="62.0" text="searching for copyright free music... " textAlignment="CENTER" wrappingWidth="120.40625">
+              <font>
+                <Font size="18.0" />
+              </font>
+          </Text>
+          </AnchorPane>
+        </StackPane>
+        <StackPane fx:id="scene2" layoutX="169.0" layoutY="144.0" prefHeight="170.0" prefWidth="270.0" visible="false">
+          <ImageView fitHeight="167.0" fitWidth="263.0" preserveRatio="true">
+            <image>
+              <Image url="@../images/Speech Balloon 3.png" />
+            </image>
+          </ImageView>
+          <AnchorPane>
+            <Text layoutX="67.0" layoutY="60.0" text="found! double checking license..." textAlignment="CENTER" wrappingWidth="120.40625">
+              <font>
+                <Font size="18.0" />
+              </font>
+          </Text>
+          </AnchorPane>
+        </StackPane>
+        <StackPane fx:id="scene3" layoutX="64.0" layoutY="263.0" prefHeight="170.0" prefWidth="270.0" visible="false">
+          <ImageView fitHeight="167.0" fitWidth="263.0" preserveRatio="true">
+            <image>
+              <Image url="@../images/Speech Balloon 3.png" />
+            </image>
+          </ImageView>
+          <AnchorPane>
+            <Text layoutX="73.0" layoutY="68.0" text="valid! adding to database...." textAlignment="CENTER" wrappingWidth="107.40625">
+              <font>
+                <Font size="18.0" />
+              </font>
+          </Text>
+          </AnchorPane>
+        </StackPane>
+
       </children>
     </AnchorPane>
     
