--- a/src/main/resources/fxml/aiWitness.fxml
+++ b/src/main/resources/fxml/aiWitness.fxml
@@ -14,10 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" 
-    fx:controller="nz.ac.auckland.se206.controllers.AiWitnessChatController"
-    stylesheets="@../css/aiWitnessStyle.css">
-  
+<StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.AiWitnessChatController">
   <children>
     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="789.0">
       <children>
@@ -40,7 +37,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-       <Slider fx:id="slider" blockIncrement="1" layoutX="321.0" layoutY="524.0" majorTickUnit="1" max="11.0" min="1" minorTickCount="0" prefHeight="66.0" prefWidth="458.0" showTickMarks="true" snapToTicks="true" value="1">
+       <Slider fx:id="slider" blockIncrement="1" layoutX="321.0" layoutY="524.0" majorTickUnit="1" max="11.0" min="1" minorTickCount="0" prefHeight="66.0" prefWidth="458.0" showTickMarks="true" snapToTicks="true" stylesheets="@../css/aiWitnessStyle.css" value="1">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Slider>
@@ -54,7 +51,7 @@
                   <Image url="@../images/speech%20ballooon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="speechBubble7" fitHeight="157.0" fitWidth="297.0" layoutX="531.0" layoutY="112.0">
+            <ImageView fx:id="speechBubble7" fitHeight="157.0" fitWidth="279.0" layoutX="549.0" layoutY="112.0">
                <image>
                   <Image url="@../images/Speech%20Balloon%202.png" />
                </image>
@@ -94,7 +91,7 @@
                   <Image url="@../images/speech%20ballooon%204.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="speechBubble10" fitHeight="157.0" fitWidth="311.0" layoutX="57.0" layoutY="83.0">
+            <ImageView fx:id="speechBubble10" fitHeight="157.0" fitWidth="297.0" layoutX="57.0" layoutY="83.0">
                <image>
                   <Image url="@../images/Speech%20Balloon%202.png" />
                </image>
@@ -103,13 +100,17 @@
                <image>
                   <Image url="@../images/speech%20ballooon.png" />
                </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </ImageView>
-            <Button fx:id="clearNoiseBtn" layoutX="401.0" layoutY="539.0" mnemonicParsing="false" onAction="#onClearNoiseBtnClick" prefHeight="39.0" prefWidth="193.0" text="CLEAR THE NOISE" styleClass="clear-noise-button"/>
+            <Button fx:id="clearNoiseBtn" layoutX="401.0" layoutY="539.0" mnemonicParsing="false" onAction="#onClearNoiseBtnClick" prefHeight="39.0" prefWidth="193.0" styleClass="clear-noise-button" stylesheets="@../css/aiWitnessStyle.css" text="CLEAR THE NOISE" />
             <ImageView fx:id="rumourBin" fitHeight="100.0" fitWidth="100.0" layoutX="27.0" layoutY="113.0">
                <image>
                   <Image url="@../images/Bin.png" />
                </image>
             </ImageView>
+            <AnchorPane layoutX="301.0" layoutY="164.0" prefHeight="356.0" prefWidth="435.0" />
       </children>
     </AnchorPane>
     
