--- a/src/main/resources/fxml/humanWitness.fxml
+++ b/src/main/resources/fxml/humanWitness.fxml
@@ -122,10 +122,13 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Button layoutX="665.0" layoutY="548.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="111.0" text="Continue">
+            <Button fx:id="continueButton" disable="true" layoutX="665.0" layoutY="548.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="111.0" text="Continue" visible="false">
                <font>
                   <Font size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button> 
       </children>
     </AnchorPane>
