--- a/src/main/resources/fxml/humanWitness.fxml
+++ b/src/main/resources/fxml/humanWitness.fxml
@@ -26,7 +26,6 @@
                   <ColorAdjust hue="-1.0" />
                </effect>
         </ImageView>
-        <Button layoutX="25.0" layoutY="29.0" mnemonicParsing="false" onAction="#onGoBack" prefHeight="52.0" prefWidth="130.0" text="Go Back" />
         <Label fx:id="timer" layoutX="639.0" layoutY="23.0" prefHeight="63.0" prefWidth="155.0" text="2:00" textFill="WHITE">
           <font>
             <Font size="50.0" />
@@ -37,7 +36,7 @@
             <Font size="20.0" />
           </font>
         </Label>
-        <Label alignment="CENTER" layoutX="259.0" layoutY="60.0" prefHeight="30.0" prefWidth="319.0" style="-fx-background-color: #000;" text="Drag across to reveal story" textFill="WHITE">
+        <Label alignment="CENTER" layoutX="296.0" layoutY="60.0" prefHeight="30.0" prefWidth="244.0" style="-fx-background-color: #000;" text="Drag across to reveal story" textFill="WHITE">
           <font>
             <Font size="20.0" />
          </font>     
@@ -117,12 +116,15 @@
                   <Font size="14.0" />
                </font></Label>
             <Polygon fx:id="dialogueText10" fill="WHITE" layoutX="404.0" layoutY="163.0" points="-32.39996337890625, 134.60000610351562, 34.0, 61.0, -0.39996337890625, 61.0" stroke="WHITE" strokeType="INSIDE" visible="false" />
-            <Label fx:id="storyCompletionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="262.0" layoutY="519.0" prefHeight="30.0" prefWidth="264.0" style="-fx-background-color: white; -fx-border-color: black; -fx-background-radius: 5;" text="Story completion: 0 % " textAlignment="CENTER">
+            <Label fx:id="storyCompletionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="262.0" layoutY="519.0" prefHeight="30.0" prefWidth="264.0" style="-fx-background-color: #a6793d; -fx-background-radius: 5;" text="Story completion: 0 % " textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
+               <effect>
+                  <ColorAdjust hue="-1.0" />
+               </effect>
             </Label>
-            <Button fx:id="continueButton" disable="true" layoutX="665.0" layoutY="548.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="111.0" text="Continue" visible="false">
+            <Button fx:id="continueButton" disable="true" layoutX="665.0" layoutY="548.0" mnemonicParsing="false" onAction="#OngoChat" prefHeight="26.0" prefWidth="111.0" text="Continue" visible="false">
                <font>
                   <Font size="18.0" />
                </font>
