--- a/src/main/resources/fxml/AIWitnessFlashback.fxml
+++ b/src/main/resources/fxml/AIWitnessFlashback.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="789.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.AiWitnessFlashbackController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="789.0" stylesheets="@../css/aiWitnessStyle.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.AiWitnessFlashbackController">
    <children>
       <ImageView fx:id="FlashbackThree" fitHeight="599.0" fitWidth="789.0">
          <image>
             <Image url="@../images/3.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="FlashbackOne" fitHeight="599.0" fitWidth="789.0">
+      <ImageView fx:id="FlashbackOne" fitHeight="599.0" fitWidth="850.0" layoutX="-48.0">
          <image>
             <Image url="@../images/1.png" />
          </image>
@@ -25,7 +25,7 @@
             <Image url="@../images/2.png" />
          </image>
       </ImageView>
-      <Button fx:id="continueButton" layoutX="298.0" layoutY="567.0" mnemonicParsing="false" onAction="#onContinueFlashback" prefHeight="25.0" prefWidth="194.0" text="CONTINUE" />
+      <Button fx:id="continueButton" layoutX="298.0" layoutY="552.0" mnemonicParsing="false" onAction="#onContinueFlashback" prefHeight="25.0" prefWidth="194.0" styleClass="continue-button" text="CONTINUE" />
       <Label fx:id="timer" layoutX="667.0" layoutY="7.0" prefHeight="63.0" prefWidth="155.0" text="2:00" textFill="WHITE">
          <font>
             <Font size="50.0" />
