--- a/src/main/resources/fxml/humanWitnessMemory.fxml
+++ b/src/main/resources/fxml/humanWitnessMemory.fxml
@@ -6,11 +6,13 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.HumanWitnessMemoryController">
@@ -22,6 +24,7 @@
             <Image url="@../images/musicStudioBackground.jpg" />
           </image>
         </ImageView>
+            <Label layoutX="373.0" layoutY="133.0" prefHeight="138.0" prefWidth="410.0" style="-fx-background-color: black;" />
             <ImageView fitHeight="105.0" fitWidth="276.0" layoutX="-3.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/titleBackground.png" />
@@ -37,15 +40,15 @@
                   <Image url="@../images/titleBackground.png" />
                </image>
             </ImageView>
-        <TextArea fx:id="txtaChat" editable="false" layoutX="11.0" layoutY="137.0" opacity="0.83" prefHeight="392.0" prefWidth="367.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" wrapText="true" />
+        <TextArea fx:id="txtaChat" editable="false" layoutX="12.0" layoutY="132.0" opacity="0.83" prefHeight="397.0" prefWidth="358.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" wrapText="true" />
             <ImageView fitHeight="240.0" fitWidth="332.0" layoutX="326.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/aICasetteTape.png" />
                </image>
             </ImageView>
             <Label alignment="CENTER" layoutX="427.0" layoutY="398.0" prefHeight="50.0" prefWidth="124.0" style="-fx-background-color: white;" text="     Choose Song to&#10;⬇Insert beats below⬇" textFill="RED" />
-        <TextField fx:id="txtInput" layoutX="12.0" layoutY="545.0" opacity="0.83" prefHeight="30.0" prefWidth="308.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" />
-        <Button fx:id="btnSend" layoutX="326.0" layoutY="545.0" mnemonicParsing="false" onAction="#onSendMessage" prefHeight="14.0" prefWidth="56.0" text="Send">
+        <TextField fx:id="txtInput" layoutX="12.0" layoutY="545.0" opacity="0.83" prefHeight="30.0" prefWidth="302.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" />
+        <Button fx:id="btnSend" layoutX="321.0" layoutY="545.0" mnemonicParsing="false" onAction="#onSendMessage" prefHeight="30.0" prefWidth="51.0" text="Send">
                <font>
                   <Font size="14.0" />
                </font></Button>
@@ -60,32 +63,54 @@
             <Font size="30.0" />
           </font>
         </Label>
-            <Button layoutX="702.0" layoutY="207.0" mnemonicParsing="false" onAction="#goToNextSong" prefHeight="46.0" prefWidth="84.0" text="Next Song">
+            <Button fx:id="playNextSongButton" layoutX="708.0" layoutY="215.0" mnemonicParsing="false" onAction="#goToNextSong" onMouseEntered="#onlightUpNextButton" onMouseExited="#onlightDownNextButton" opacity="0.7" prefHeight="33.0" prefWidth="34.0" style="-fx-background-radius: 17;">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="516.0" layoutY="207.0" mnemonicParsing="false" onAction="#goToPreviousSong" prefHeight="46.0" prefWidth="94.0" text="Previous Song">
+            <Button fx:id="playPreviousSongButton" layoutX="564.0" layoutY="216.0" mnemonicParsing="false" onAction="#goToPreviousSong" onMouseEntered="#onlightUpPreviousButton" onMouseExited="#onlightDownPreviousButton" opacity="0.7" prefHeight="33.0" prefWidth="34.0" style="-fx-background-radius: 17;">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="playButton" layoutX="614.0" layoutY="207.0" mnemonicParsing="false" onAction="#turnOnCassetteTape" prefHeight="46.0" prefWidth="84.0" text="Play">
+            <Button fx:id="playButton" layoutX="629.0" layoutY="207.0" mnemonicParsing="false" onAction="#turnOnCassetteTape" prefHeight="46.0" prefWidth="46.0" style="-fx-background-color: white; -fx-background-radius: 200;">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Label fx:id="songLabel" alignment="CENTER" layoutX="520.0" layoutY="137.0" prefHeight="46.0" prefWidth="265.0" style="-fx-background-color: black; -fx-background-radius: 10;" textFill="WHITE">
+            <Label fx:id="songLabel" alignment="CENTER" layoutX="520.0" layoutY="137.0" prefHeight="46.0" prefWidth="258.0" style="-fx-background-color: black; -fx-background-radius: 10;" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <ImageView fx:id="musicCover" fitHeight="126.0" fitWidth="127.0" layoutX="386.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView disable="true" fitHeight="82.0" fitWidth="84.0" layoutX="613.0" layoutY="192.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/musicbuttonPlay.png" />
+               </image>
+            </ImageView>
+            <ImageView disable="true" fitHeight="67.0" fitWidth="69.0" layoutX="547.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/musicbuttonPrevious.png" />
+               </image>
+            </ImageView>
+            <ImageView disable="true" fitHeight="67.0" fitWidth="69.0" layoutX="692.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+               <image>
+                  <Image url="@../images/musicbuttonPrevious.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="musicCover" fitHeight="126.0" fitWidth="127.0" layoutX="384.0" layoutY="139.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/carRadio.jpg" />
                </image>
+               <effect>
+                  <InnerShadow blurType="GAUSSIAN" choke="1.0" height="4.0" radius="1.25" width="3.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </InnerShadow>
+               </effect>
             </ImageView>
-        <ImageView fx:id="cassetteTape" disable="true" fitHeight="142.0" fitWidth="231.0" layoutX="578.0" layoutY="280.0" preserveRatio="true">
+        <ImageView fx:id="cassetteTape" disable="true" fitHeight="142.0" fitWidth="231.0" layoutX="577.0" layoutY="289.0" preserveRatio="true">
           <image>
             <Image url="@../images/cassetteTape.png" />
           </image>
