--- a/src/main/resources/fxml/aiWitness.fxml
+++ b/src/main/resources/fxml/aiWitness.fxml
@@ -27,16 +27,11 @@
         <TextField fx:id="txtInput" layoutX="20.0" layoutY="545.0" opacity="0.83" prefHeight="26.0" prefWidth="223.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" />
         <Button fx:id="btnSend" layoutX="252.0" layoutY="545.0" mnemonicParsing="false" onAction="#onSendMessage" text="Send" />
         <Button layoutX="13.0" layoutY="45.0" mnemonicParsing="false" onAction="#onGoBack" prefHeight="52.0" prefWidth="130.0" text="Go Back" />
-        <Label fx:id="timer" layoutX="627.0" layoutY="39.0" prefHeight="63.0" prefWidth="150.0" style="-fx-background-color: #000;" text="2:00" textFill="WHITE">
+        <Label fx:id="timer" layoutX="627.0" layoutY="39.0" prefHeight="63.0" prefWidth="150.0" style="-fx-background-color: #000;" text="2:00" textAlignment="CENTER" textFill="WHITE">
           <font>
-            <Font size="50.0" />
+            <Font name="Tempus Sans ITC" size="50.0" />
           </font></Label>
         <ProgressBar fx:id="progressBar" layoutY="8.0" prefHeight="20.0" prefWidth="790.0" progress="0.0" />
-            <Label layoutX="262.0" layoutY="45.0" style="-fx-background-color: #000;" text="Welcome to WitnessAi Memory" textFill="WHITE">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
        <Slider fx:id="slider" blockIncrement="1" layoutX="321.0" layoutY="524.0" majorTickUnit="1" max="11.0" min="1" minorTickCount="0" prefHeight="66.0" prefWidth="458.0" showTickMarks="true" snapToTicks="true" stylesheets="@../css/aiWitnessStyle.css" value="1">
                <cursor>
                   <Cursor fx:constant="HAND" />
