--- a/src/main/resources/fxml/defendant.fxml
+++ b/src/main/resources/fxml/defendant.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.DefendantChatController">
   <children>
@@ -21,17 +22,62 @@
             <Image url="@../images/music.jpg" />
           </image>
         </ImageView>
-        <ImageView fx:id="button" fitHeight="87.0" fitWidth="56.0" layoutX="689.0" layoutY="246.0" preserveRatio="true" onMouseClicked="#onFlashbackButtonPress">
+            <AnchorPane fx:id="disc1" layoutX="371.0" layoutY="175.0" prefHeight="200.0" prefWidth="200.0" visible="false">
+               <children>
+              <ImageView fitHeight="163.0" fitWidth="178.0">
+                <image>
+                  <Image url="@../images/frame.png" />
+                </image>
+              </ImageView>
+                  <Text fill="WHITE" layoutX="52.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copyright Free" textAlignment="CENTER" wrappingWidth="74.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="disc2" layoutX="545.0" layoutY="164.0" prefHeight="200.0" prefWidth="200.0" visible="false">
+               <children>
+                  <ImageView fitHeight="163.0" fitWidth="178.0">
+                     <image>
+                        <Image url="@../images/frame.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="WHITE" layoutX="51.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="With Consent" textAlignment="CENTER" wrappingWidth="74.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="disc3" layoutX="483.0" layoutY="268.0" prefHeight="200.0" prefWidth="200.0" visible="false">
+               <children>
+                  <ImageView fitHeight="163.0" fitWidth="178.0">
+                     <image>
+                        <Image url="@../images/frame.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="WHITE" layoutX="53.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copyrighted" textAlignment="CENTER" wrappingWidth="74.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="disc4" layoutX="337.0" layoutY="306.0" prefHeight="200.0" prefWidth="200.0" visible="false">
+               <children>
+                  <ImageView fitHeight="163.0" fitWidth="178.0">
+                     <image>
+                        <Image url="@../images/frame.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="WHITE" layoutX="53.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stolen" textAlignment="CENTER" wrappingWidth="74.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="disc5" layoutX="594.0" layoutY="310.0" prefHeight="200.0" prefWidth="200.0" visible="false">
+               <children>
+                  <ImageView fitHeight="163.0" fitWidth="178.0">
+                     <image>
+                        <Image url="@../images/frame.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="WHITE" layoutX="53.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unknown Origin" textAlignment="CENTER" wrappingWidth="74.0" />
+               </children>
+            </AnchorPane>
+        <ImageView fx:id="basket" fitHeight="67.0" fitWidth="131.0" layoutX="449.0" layoutY="489.0" preserveRatio="true" visible="false">
           <image>
-            <Image url="@../images/button.png" />
+            <Image url="@../images/basket.png" />
           </image>
         </ImageView>
         <TextArea fx:id="txtaChat" editable="false" layoutX="20.0" layoutY="230.0" opacity="0.83" prefHeight="299.0" prefWidth="223.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" wrapText="true" />
-        <ImageView fx:id="headphones" fitHeight="55.0" fitWidth="57.0" layoutX="510.0" layoutY="450.0">
-          <image>
-            <Image url="@../images/headphones.png" />
-          </image>
-        </ImageView>
         <TextField fx:id="txtInput" layoutX="20.0" layoutY="545.0" opacity="0.83" prefHeight="26.0" prefWidth="223.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" />
         <Button fx:id="btnSend" layoutX="252.0" layoutY="545.0" mnemonicParsing="false" onAction="#onSendMessage" text="Send" />
         <Button layoutX="25.0" layoutY="29.0" mnemonicParsing="false" onAction="#onGoBack" prefHeight="52.0" prefWidth="130.0" text="Go Back" />
@@ -40,21 +86,17 @@
               <Font size="50.0" />
             </font></Label>
         <ProgressBar fx:id="progressBar" layoutX="-1.0" layoutY="104.0" prefHeight="20.0" prefWidth="790.0" progress="0.0" />
-        <Label layoutX="334.0" layoutY="30.0" style="-fx-background-color: #000;" text=" This is a flashback! " textFill="WHITE">
+        <Label layoutX="334.0" layoutY="30.0" style="-fx-background-color: #000;" text="Chat with the defendant" textFill="WHITE">
           <font>
             <Font size="20.0" />
           </font>
         </Label>
-        <Label layoutX="259.0" layoutY="60.0" style="-fx-background-color: #000;" text="Once you leave you can't come back. " textFill="WHITE">
+        <Label layoutX="259.0" layoutY="60.0" style="-fx-background-color: #000;" text="Interact with your surrondings, learn about its situation." textFill="WHITE">
           <font>
             <Font size="20.0" />
           </font>
         </Label>
-            <Label layoutX="683.0" layoutY="219.0" prefHeight="20.0" prefWidth="68.0" style="-fx-background-color: #000;" text="press me!" textFill="WHITE">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
+            <Button fx:id="gameButton" onAction="#onGameStart" layoutX="455.0" layoutY="351.0" mnemonicParsing="false" text="Click to start game" />
       </children>
     </AnchorPane>
     
