--- a/src/main/resources/fxml/finalPage.fxml
+++ b/src/main/resources/fxml/finalPage.fxml
@@ -37,7 +37,7 @@
           </font>
         </Label>
             <Button layoutX="657.0" layoutY="519.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="102.0" text="Restart Game" />
-            <TextArea fx:id="txtInput" layoutX="235.0" layoutY="316.0" prefHeight="146.0" prefWidth="336.0" promptText="Input text here" />
+            <TextArea fx:id="txtInput" layoutX="235.0" layoutY="316.0" prefHeight="146.0" prefWidth="336.0" promptText="Input text here" wrapText="true" />
             <Button fx:id="submitButton" layoutX="366.0" layoutY="479.0" mnemonicParsing="false" onAction="#onSendClick" prefHeight="39.0" prefWidth="70.0" text="Submit" />
             <Label alignment="CENTER" layoutX="321.0" layoutY="277.0" prefHeight="33.0" prefWidth="160.0" text="Briefly state why?">
                <font>
