--- a/src/main/resources/fxml/finalPage.fxml
+++ b/src/main/resources/fxml/finalPage.fxml
@@ -61,7 +61,7 @@
             <Button layoutX="657.0" layoutY="519.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="102.0" text="Restart Game" />
             <TextArea fx:id="txtInput" layoutX="235.0" layoutY="339.0" onMouseClicked="#onInputStartUp" prefHeight="146.0" prefWidth="336.0" promptText="Input text here" stylesheets="@../css/finalPageStyle.css" wrapText="true" />
             <Button fx:id="submitButton" layoutX="368.0" layoutY="529.0" mnemonicParsing="false" onAction="#onSendClick" prefHeight="39.0" prefWidth="70.0" text="Submit" />
-            <Label alignment="CENTER" layoutX="323.0" layoutY="302.0" prefHeight="33.0" prefWidth="160.0" text="Briefly state why?">
+            <Label fx:id="questionLabel" alignment="CENTER" layoutX="323.0" layoutY="302.0" prefHeight="33.0" prefWidth="160.0" text="Briefly state why?">
                <font>
                   <Font size="20.0" />
                </font>
