--- a/src/main/resources/fxml/finalPage.fxml
+++ b/src/main/resources/fxml/finalPage.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -11,10 +13,6 @@
 
 <StackPane stylesheets="@../css/finalPageStyle.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.FinalPageController">
   <children>
-
-    <VBox fx:id="overlay" alignment="CENTER" style="-fx-background-color: rgba(0, 0, 0, 0.5);" visible="false">
-      <Label style="-fx-text-fill: white; -fx-font-size: 36px;" text="Game Over! Time's up!" />
-    </VBox>
     <VBox fx:id="overlaySuccess" alignment="CENTER" style="-fx-background-color: rgba(0, 0, 0, 0.5);" visible="false">
       <Label style="-fx-text-fill: white; -fx-font-size: 36px;" text="Correct! Thanks for playing!" />
     </VBox>
@@ -43,7 +41,8 @@
             <Button fx:id="restartButton" layoutX="657.0" layoutY="519.0" mnemonicParsing="false" onAction="#onResetGame" prefHeight="39.0" prefWidth="102.0" text="Restart Game">
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor></Button>
+               </cursor>
+            </Button>
             <TextArea fx:id="txtInput" layoutX="235.0" layoutY="339.0" onMouseClicked="#onInputStartUp" prefHeight="146.0" prefWidth="336.0" promptText="Input text here" wrapText="true" />
             <Button fx:id="submitButton" layoutX="368.0" layoutY="532.0" mnemonicParsing="false" onAction="#onSendClick" prefHeight="39.0" prefWidth="70.0" text="Submit" />
             <Label fx:id="questionLabel" alignment="CENTER" layoutX="323.0" layoutY="302.0" prefHeight="33.0" prefWidth="160.0" text="Briefly state why?">
@@ -61,6 +60,19 @@
                   <Font size="18.0" />
                </font>
             </Label>
+      
+          <VBox fx:id="overlay" alignment="CENTER" prefHeight="599.0" prefWidth="790.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);" visible="false">
+            <Label fx:id="waitingLabel" alignment="CENTER" style="-fx-text-fill: white; -fx-font-size: 36px;" text="Awaiting Results">
+                  <font>
+                     <Font size="18.0" />
+                  </font>
+               </Label>
+               <ImageView fitHeight="405.0" fitWidth="605.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../images/loading.gif" />
+                  </image>
+               </ImageView>
+          </VBox>
       </children>
     </AnchorPane>
   </children>
