--- a/src/main/resources/fxml/defendantMemory.fxml
+++ b/src/main/resources/fxml/defendantMemory.fxml
@@ -191,7 +191,7 @@
     </AnchorPane>
 
     <!-- Intro Pop-up -->
-    <VBox fx:id="memoryMessage" alignment="CENTER" style="-fx-background-color: rgba(0, 0, 0, 0.5);" visible="false">
+    <VBox fx:id="flashbackMessage" alignment="CENTER" style="-fx-background-color: rgba(0, 0, 0, 0.5);" visible="false">
       <children>
         <Label prefHeight="88.0" prefWidth="165.0" style="-fx-text-fill: white; -fx-font-size: 36px;" text="Flashback!">
           <font>
