--- a/src/main/resources/fxml/aiWitness.fxml
+++ b/src/main/resources/fxml/aiWitness.fxml
@@ -13,8 +13,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
-<StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.AiWitnessChatController" onKeyPressed="#sendMessage">
+<StackPane onKeyPressed="#sendMessage" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.AiWitnessChatController">
   <children>
     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="789.0">
       <children>
@@ -29,7 +30,7 @@
         <Button layoutX="13.0" layoutY="45.0" mnemonicParsing="false" onAction="#onGoBack" prefHeight="52.0" prefWidth="130.0" text="Go Back" />
         <Label fx:id="timer" layoutX="627.0" layoutY="39.0" prefHeight="63.0" prefWidth="150.0" style="-fx-background-color: #000;" text="5:00" textAlignment="CENTER" textFill="WHITE">
           <font>
-            <Font name="Tempus Sans ITC" size="50.0" />
+            <Font name="Book Antiqua" size="50.0" />
           </font></Label>
         <ProgressBar fx:id="progressBar" layoutY="8.0" prefHeight="20.0" prefWidth="790.0" progress="0.0" />
        <Slider fx:id="slider" blockIncrement="1" layoutX="321.0" layoutY="524.0" majorTickUnit="1" max="11.0" min="1" minorTickCount="0" prefHeight="66.0" prefWidth="458.0" showTickMarks="true" snapToTicks="true" stylesheets="@../css/aiWitnessStyle.css" value="1">
@@ -83,6 +84,7 @@
                </image>
             </ImageView>
             <AnchorPane layoutX="295.0" layoutY="163.0" prefHeight="356.0" prefWidth="435.0" visible="false" />
+            <TextFlow fx:id="StartLabelText" layoutX="313.0" layoutY="382.0" prefHeight="138.0" prefWidth="458.0" />
       </children>
     </AnchorPane>
     
