--- a/src/main/resources/fxml/defendantMemory.fxml
+++ b/src/main/resources/fxml/defendantMemory.fxml
@@ -29,19 +29,19 @@
         </ImageView>
 
         <!-- Top Section -->
-        <Label layoutX="-2.0" layoutY="-7.0" prefHeight="145.0" prefWidth="1116.0" style="-fx-background-color: #000;" />
+        <Label layoutX="-2.0" layoutY="-7.0" prefHeight="180.0" prefWidth="1116.0" style="-fx-background-color: #000;" />
         <Label fx:id="timer" layoutX="941.0" layoutY="24.0" prefHeight="63.0" prefWidth="155.0" text="5:00" textFill="WHITE">
             <font>
               <Font size="50.0" />
             </font>
         </Label>
-        <ProgressBar fx:id="progressBar" layoutX="-1.0" layoutY="132.0" prefHeight="26.0" prefWidth="1108.0" progress="0.0" />
-        <Label layoutX="245.0" layoutY="36.0" style="-fx-background-color: #000;" text=" This is a flashback! Please use the slide bar to follow " textFill="WHITE">
+        <ProgressBar fx:id="progressBar" layoutY="158.0" prefHeight="26.0" prefWidth="1100.0" progress="0.0" />
+        <Label layoutX="244.0" layoutY="53.0" style="-fx-background-color: #000;" text=" This is a flashback! Please use the slide bar to follow " textFill="WHITE">
           <font>
             <Font name="Futura Bold" size="20.0" />
           </font>
         </Label>
-        <Label layoutX="232.0" layoutY="64.0" style="-fx-background-color: #000;" text="the defendant's story and proceed when you're satisfied" textFill="WHITE">
+        <Label layoutX="231.0" layoutY="81.0" style="-fx-background-color: #000;" text="the defendant's story and proceed when you're satisfied" textFill="WHITE">
           <font>
             <Font name="Futura Bold" size="20.0" />
           </font>
@@ -186,7 +186,7 @@
 
         <!-- Slide Bar and Proceed Button -->
         <Slider fx:id="slidingBar" blockIncrement="1.0" layoutX="36.0" layoutY="695.0" majorTickUnit="1.0" max="15.0" minorTickCount="0" prefHeight="84.0" prefWidth="882.0" showTickMarks="true" snapToTicks="true" styleClass="glow-slider" />
-        <Button fx:id="proceedButton" layoutX="922.0" layoutY="710.0" mnemonicParsing="false" onAction="#onProceed" prefHeight="50.0" prefWidth="135.0" text="Proceed" visible="false"/>
+        <Button fx:id="proceedButton" layoutX="922.0" layoutY="710.0" mnemonicParsing="false" onAction="#onProceed" prefHeight="50.0" prefWidth="135.0" text="Proceed" visible="false" />
       </children>
     </AnchorPane>
 
